--- a/Part2-Mapping Yelp Search Results.ipynb
+++ b/Part2-Mapping Yelp Search Results.ipynb
@@ -102,10 +102,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ffa40ba8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: plotly in c:\\users\\melissa\\anaconda3\\envs\\dojo-env\\lib\\site-packages (5.11.0)\n",
+      "Requirement already satisfied: tenacity>=6.2.0 in c:\\users\\melissa\\anaconda3\\envs\\dojo-env\\lib\\site-packages (from plotly) (8.1.0)\n"
+     ]
+    }
+   ],
    "source": [
     "## Plotly is not included in your dojo-env\n",
     "!pip install plotly"
@@ -113,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6c26b323",
    "metadata": {},
    "outputs": [],
@@ -132,12 +141,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "73f882e7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 201 entries, 0 to 200\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   id             201 non-null    object \n",
+      " 1   alias          201 non-null    object \n",
+      " 2   name           201 non-null    object \n",
+      " 3   image_url      195 non-null    object \n",
+      " 4   is_closed      201 non-null    bool   \n",
+      " 5   url            201 non-null    object \n",
+      " 6   review_count   201 non-null    int64  \n",
+      " 7   categories     201 non-null    object \n",
+      " 8   rating         201 non-null    float64\n",
+      " 9   coordinates    201 non-null    object \n",
+      " 10  transactions   201 non-null    object \n",
+      " 11  location       201 non-null    object \n",
+      " 12  phone          194 non-null    float64\n",
+      " 13  display_phone  194 non-null    object \n",
+      " 14  distance       201 non-null    float64\n",
+      " 15  price          143 non-null    object \n",
+      "dtypes: bool(1), float64(3), int64(1), object(11)\n",
+      "memory usage: 23.9+ KB\n"
+     ]
+    }
+   ],
    "source": [
-    "## Load in csv.gz\n"
+    "## Load in csv.gz\n",
+    "df= pd.read_csv('Data/Fresno-wings.csv.gz')\n",
+    "df.info()\n",
+    "df.head()"
    ]
   },
   {
@@ -730,7 +772,7 @@
   "kernelspec": {
    "display_name": "Python (dojo-env)",
    "language": "python",
-   "name": "dojo-env-m1"
+   "name": "dojo-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -742,7 +784,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.15"
   },
   "toc": {
    "base_numbering": 1,
