--- a/Part2-Mapping Yelp Search Results.ipynb
+++ b/Part2-Mapping Yelp Search Results.ipynb
@@ -173,6 +173,200 @@
       "dtypes: bool(1), float64(3), int64(1), object(11)\n",
       "memory usage: 23.9+ KB\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>alias</th>\n",
+       "      <th>name</th>\n",
+       "      <th>image_url</th>\n",
+       "      <th>is_closed</th>\n",
+       "      <th>url</th>\n",
+       "      <th>review_count</th>\n",
+       "      <th>categories</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>coordinates</th>\n",
+       "      <th>transactions</th>\n",
+       "      <th>location</th>\n",
+       "      <th>phone</th>\n",
+       "      <th>display_phone</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>mlOelmCRqLOkWlLcAIZ-BA</td>\n",
+       "      <td>swamp-chicken-missouri-city</td>\n",
+       "      <td>Swamp Chicken</td>\n",
+       "      <td>https://s3-media2.fl.yelpcdn.com/bphoto/iV2Jhj...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://www.yelp.com/biz/swamp-chicken-missour...</td>\n",
+       "      <td>23</td>\n",
+       "      <td>[{'alias': 'cajun', 'title': 'Cajun/Creole'}]</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>{'latitude': 29.545382778092428, 'longitude': ...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>{'address1': '8035 Hwy 6', 'address2': '', 'ad...</td>\n",
+       "      <td>1.281970e+10</td>\n",
+       "      <td>(281) 969-8945</td>\n",
+       "      <td>7523.026816</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>b4a8eGt5rBr8ubKGXO8wYA</td>\n",
+       "      <td>take-the-wheel-mobile-fresno</td>\n",
+       "      <td>Take The Wheel Mobile</td>\n",
+       "      <td>https://s3-media2.fl.yelpcdn.com/bphoto/WWd4yD...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://www.yelp.com/biz/take-the-wheel-mobile...</td>\n",
+       "      <td>59</td>\n",
+       "      <td>[{'alias': 'foodtrucks', 'title': 'Food Trucks...</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>{'latitude': 29.523673, 'longitude': -95.45414}</td>\n",
+       "      <td>['pickup', 'delivery']</td>\n",
+       "      <td>{'address1': '4233 Fm 521 Rd', 'address2': Non...</td>\n",
+       "      <td>1.832334e+10</td>\n",
+       "      <td>(832) 334-2181</td>\n",
+       "      <td>2171.094342</td>\n",
+       "      <td>$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>zcc818cmdAJ6JDiS8ODXAg</td>\n",
+       "      <td>big-city-wings-pearland</td>\n",
+       "      <td>Big City Wings</td>\n",
+       "      <td>https://s3-media2.fl.yelpcdn.com/bphoto/LN4X0h...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://www.yelp.com/biz/big-city-wings-pearla...</td>\n",
+       "      <td>287</td>\n",
+       "      <td>[{'alias': 'chicken_wings', 'title': 'Chicken ...</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>{'latitude': 29.557198, 'longitude': -95.371067}</td>\n",
+       "      <td>['pickup', 'delivery']</td>\n",
+       "      <td>{'address1': '9721 Broadway St', 'address2': N...</td>\n",
+       "      <td>1.346755e+10</td>\n",
+       "      <td>(346) 754-5980</td>\n",
+       "      <td>9797.744647</td>\n",
+       "      <td>$$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>kBPaHWjREZNgr35J5l3_jg</td>\n",
+       "      <td>wingstop-arcola</td>\n",
+       "      <td>Wingstop</td>\n",
+       "      <td>https://s3-media1.fl.yelpcdn.com/bphoto/2X_qSY...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://www.yelp.com/biz/wingstop-arcola?adjus...</td>\n",
+       "      <td>38</td>\n",
+       "      <td>[{'alias': 'chicken_wings', 'title': 'Chicken ...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>{'latitude': 29.50753417185821, 'longitude': -...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>{'address1': '5243 Fm 521 Rd', 'address2': 'St...</td>\n",
+       "      <td>1.281432e+10</td>\n",
+       "      <td>(281) 431-9464</td>\n",
+       "      <td>3479.181431</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>s7urMWCZg99G2AkYbfCZZw</td>\n",
+       "      <td>wing-station-missouri-city-3</td>\n",
+       "      <td>Wing Station</td>\n",
+       "      <td>https://s3-media2.fl.yelpcdn.com/bphoto/sy9AFx...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>https://www.yelp.com/biz/wing-station-missouri...</td>\n",
+       "      <td>28</td>\n",
+       "      <td>[{'alias': 'chicken_wings', 'title': 'Chicken ...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>{'latitude': 29.513184, 'longitude': -95.526678}</td>\n",
+       "      <td>['pickup', 'delivery']</td>\n",
+       "      <td>{'address1': '4340 Sienna Pkwy', 'address2': '...</td>\n",
+       "      <td>1.346817e+10</td>\n",
+       "      <td>(346) 816-7213</td>\n",
+       "      <td>6135.353721</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       id                         alias  \\\n",
+       "0  mlOelmCRqLOkWlLcAIZ-BA   swamp-chicken-missouri-city   \n",
+       "1  b4a8eGt5rBr8ubKGXO8wYA  take-the-wheel-mobile-fresno   \n",
+       "2  zcc818cmdAJ6JDiS8ODXAg       big-city-wings-pearland   \n",
+       "3  kBPaHWjREZNgr35J5l3_jg               wingstop-arcola   \n",
+       "4  s7urMWCZg99G2AkYbfCZZw  wing-station-missouri-city-3   \n",
+       "\n",
+       "                    name                                          image_url  \\\n",
+       "0          Swamp Chicken  https://s3-media2.fl.yelpcdn.com/bphoto/iV2Jhj...   \n",
+       "1  Take The Wheel Mobile  https://s3-media2.fl.yelpcdn.com/bphoto/WWd4yD...   \n",
+       "2         Big City Wings  https://s3-media2.fl.yelpcdn.com/bphoto/LN4X0h...   \n",
+       "3               Wingstop  https://s3-media1.fl.yelpcdn.com/bphoto/2X_qSY...   \n",
+       "4           Wing Station  https://s3-media2.fl.yelpcdn.com/bphoto/sy9AFx...   \n",
+       "\n",
+       "   is_closed                                                url  review_count  \\\n",
+       "0      False  https://www.yelp.com/biz/swamp-chicken-missour...            23   \n",
+       "1      False  https://www.yelp.com/biz/take-the-wheel-mobile...            59   \n",
+       "2      False  https://www.yelp.com/biz/big-city-wings-pearla...           287   \n",
+       "3      False  https://www.yelp.com/biz/wingstop-arcola?adjus...            38   \n",
+       "4      False  https://www.yelp.com/biz/wing-station-missouri...            28   \n",
+       "\n",
+       "                                          categories  rating  \\\n",
+       "0      [{'alias': 'cajun', 'title': 'Cajun/Creole'}]     4.0   \n",
+       "1  [{'alias': 'foodtrucks', 'title': 'Food Trucks...     4.5   \n",
+       "2  [{'alias': 'chicken_wings', 'title': 'Chicken ...     3.5   \n",
+       "3  [{'alias': 'chicken_wings', 'title': 'Chicken ...     2.0   \n",
+       "4  [{'alias': 'chicken_wings', 'title': 'Chicken ...     3.0   \n",
+       "\n",
+       "                                         coordinates            transactions  \\\n",
+       "0  {'latitude': 29.545382778092428, 'longitude': ...                      []   \n",
+       "1    {'latitude': 29.523673, 'longitude': -95.45414}  ['pickup', 'delivery']   \n",
+       "2   {'latitude': 29.557198, 'longitude': -95.371067}  ['pickup', 'delivery']   \n",
+       "3  {'latitude': 29.50753417185821, 'longitude': -...                      []   \n",
+       "4   {'latitude': 29.513184, 'longitude': -95.526678}  ['pickup', 'delivery']   \n",
+       "\n",
+       "                                            location         phone  \\\n",
+       "0  {'address1': '8035 Hwy 6', 'address2': '', 'ad...  1.281970e+10   \n",
+       "1  {'address1': '4233 Fm 521 Rd', 'address2': Non...  1.832334e+10   \n",
+       "2  {'address1': '9721 Broadway St', 'address2': N...  1.346755e+10   \n",
+       "3  {'address1': '5243 Fm 521 Rd', 'address2': 'St...  1.281432e+10   \n",
+       "4  {'address1': '4340 Sienna Pkwy', 'address2': '...  1.346817e+10   \n",
+       "\n",
+       "    display_phone     distance price  \n",
+       "0  (281) 969-8945  7523.026816   NaN  \n",
+       "1  (832) 334-2181  2171.094342     $  \n",
+       "2  (346) 754-5980  9797.744647    $$  \n",
+       "3  (281) 431-9464  3479.181431   NaN  \n",
+       "4  (346) 816-7213  6135.353721   NaN  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -213,10 +407,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "825c85f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>{'latitude': 29.545382778092428, 'longitude': ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>{'latitude': 29.523673, 'longitude': -95.45414}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>{'latitude': 29.557198, 'longitude': -95.371067}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>{'latitude': 29.50753417185821, 'longitude': -...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>{'latitude': 29.513184, 'longitude': -95.526678}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>{'latitude': 29.55265, 'longitude': -95.3939}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>{'latitude': 29.569697727030402, 'longitude': ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>{'latitude': 29.567578, 'longitude': -95.565296}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>{'latitude': 29.5646162, 'longitude': -95.5644...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>{'latitude': 29.580023022486703, 'longitude': ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>201 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     0\n",
+       "0    {'latitude': 29.545382778092428, 'longitude': ...\n",
+       "1      {'latitude': 29.523673, 'longitude': -95.45414}\n",
+       "2     {'latitude': 29.557198, 'longitude': -95.371067}\n",
+       "3    {'latitude': 29.50753417185821, 'longitude': -...\n",
+       "4     {'latitude': 29.513184, 'longitude': -95.526678}\n",
+       "..                                                 ...\n",
+       "196      {'latitude': 29.55265, 'longitude': -95.3939}\n",
+       "197  {'latitude': 29.569697727030402, 'longitude': ...\n",
+       "198   {'latitude': 29.567578, 'longitude': -95.565296}\n",
+       "199  {'latitude': 29.5646162, 'longitude': -95.5644...\n",
+       "200  {'latitude': 29.580023022486703, 'longitude': ...\n",
+       "\n",
+       "[201 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## use .apply pd.Series to convert a dict to columns\n",
     "df['coordinates'].apply(pd.Series)"
@@ -228,6 +518,28 @@
    "metadata": {},
    "source": [
     "- Why didn't that work???"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "aa9e1387",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'test_coord' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mtype\u001b[39m(\u001b[43mtest_coord\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'test_coord' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "type(test_coord)"
    ]
   },
   {
